fix: z-index

--- a/src/assets/styles/components/modal.css
+++ b/src/assets/styles/components/modal.css
@@ -4,7 +4,7 @@
   inset: 0;
   background: rgba(0, 0, 0, 0.7);
   position: fixed;
-  z-index: 1;
+  z-index: 3;
 
   & .modal-body {
     position: fixed;
